--- a/packages/starboard-python/package.json
+++ b/packages/starboard-python/package.json
@@ -9,7 +9,7 @@
     "build": "rimraf dist && rollup -c rollup.config.ts",
     "test": "starlit nbtest test --timeout=60",
     "test:nocoi": "starlit nbtest test --timeout=60 --cross_origin_isolated=false",
-    "postinstall": "patch-package"
+    "postinstall": "node $CWD_INIT/node_modules/patch-package/index.js"
   },
   "repository": {
     "type": "git",
