--- a/packages/starboard-python/package.json
+++ b/packages/starboard-python/package.json
@@ -9,7 +9,7 @@
     "build": "rimraf dist && rollup -c rollup.config.ts",
     "test": "starlit nbtest test --timeout=60",
     "test:nocoi": "starlit nbtest test --timeout=60 --cross_origin_isolated=false",
-    "postinstall": "node $CWD_INIT/node_modules/patch-package/index.js"
+    "postinstall": "node $INIT_CWD/node_modules/patch-package/dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -40,6 +40,7 @@
     "clean-css": "^5.1.3",
     "nanoid": "^3.1.23",
     "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.55.0",
     "rollup-plugin-dts": "^3.0.2",
