--- a/packages/starboard-python/package.json
+++ b/packages/starboard-python/package.json
@@ -31,7 +31,9 @@
   "dependencies": {
     "@types/katex": "^0.11.1",
     "lit": "^2.0.2",
-    "pyodide": "^0.18.1"
+    "pyodide": "^0.18.1",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^19.0.2",
@@ -39,8 +41,6 @@
     "@types/markdown-it": "^12.0.3",
     "clean-css": "^5.1.3",
     "nanoid": "^3.1.23",
-    "patch-package": "^6.4.7",
-    "postinstall-postinstall": "^2.1.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.55.0",
     "rollup-plugin-dts": "^3.0.2",
