--- a/packages/starboard-notebook/package.json
+++ b/packages/starboard-notebook/package.json
@@ -67,6 +67,7 @@
     "mini-css-extract-plugin": "^2.4.2",
     "monaco-editor-webpack-plugin": "^3.1.0",
     "node-fetch": "^2.6.1",
+    "patch-package": "^6.4.7",
     "prettier": "^2.2.1",
     "process": "^0.11.10",
     "raw-loader": "^4.0.0",
