Install our own versions

--- a/.github/workflows/js-ci.yml
+++ b/.github/workflows/js-ci.yml
@@ -31,16 +31,20 @@ jobs:
       run: |
         yarn install
         yarn run build
+        yarn pack
 
     - name: Build Starboard Python
       working-directory: packages/starboard-python
       run: |
         yarn install
         yarn run build
+        yarn pack
 
     - name: Build
       working-directory: packages/starboard-notebook
       run: |
+        yarn add ../starboard-python/*.tgz
+        yarn add ../starboard-rich-editor/*.tgz
         yarn install
         yarn run build:nominify
     
