--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "build": { "dockerfile": "Dockerfile" },
+  "image": "mcr.microsoft.com/devcontainers/typescript-node:0-18",
   "postCreateCommand": "bash -i -c 'yarn run bootstrap && yarn build'",
   "customizations": {
     "vscode": {
